tests/codegen/fail/unsupported_cleanup_for_build.ql
extern "c" fn first()

fn main() -> Int {
    defer first()
    for value in 0 {
        break
    }
    return 0
}