tests/codegen/fail/unsupported_cleanup_for_build.stderr
error: tests/codegen/fail/unsupported_cleanup_for_build.ql:5:5: LLVM IR backend foundation does not support `for` lowering yet
      for value in 0 {
      ^^^^^^^^
